# moviehub

./: .coverage  .gitignore  ANALYSIS_REPORT.md  GEMINI.md  IMPROVEMENTS.md  MOVIE_GOODS.md  README.md  TEST_VALIDATION_REPORT.md  TODO.md  cineq_test.html  com.moviehub.refresh.plist  file:testdb_global  main.py  moviehub_PRD.md  pyproject.toml  raw_cgv.html  raw_cgv_desktop.html  raw_megabox.html  report.py  requirements.txt  vercel.json
.github/workflows/: cron.yml
08/622232e7e4/: metadata.json
0a/2db48a55e8/: metadata.json
48/8383391e15/: metadata.json
52/3460a160df/: metadata.json
62/88109cda2e/: metadata.json
74/9867bdc308/: metadata.json
8b/0df75d1d3f/: metadata.json
94/dd08d753dd/: metadata.json
9c/f3a6b8b859/: metadata.json
a3/9d156a7c89/: metadata.json
ad/d29ab7d930/: metadata.json
alembic/: env.py
alembic/versions/: 538730e551e6_change_progressstartdate_and_.py
api/: index.py
b3/99b06071ce/: metadata.json
cb/923a94f9b9/: metadata.json
d6/ef1f119cb1/: metadata.json
docs/: index.html
e9/2095634bb0/: metadata.json
f2/57d9e70acd/: metadata.json
src/collectors/: base.py  cgv.py  cineq.py  (+2 more)
tests/: conftest.py  test_cinema_pages.py  test_lotte_collector.py  test_performance.py  test_security.py  test_web.py
tools/: README.md  add_manual_event.py  analyze_event_gaps.py  check_gaps.py  check_new_events.py  check_raw_data.py  debug_api.py  debug_cgv_desktop.py  debug_collectors.py  discover_apis.py  migrate_db.py  refresh_events.py  relay_crawler.py  report_status.py  run_cron.py  scan_events_range.py  scan_missing_events.py
(+131 files in other folders)
